@@ -100,15 +100,4 @@ public abstract class BufferChangeAdapter implements BufferChangeListener
 	 */
 	public void transactionComplete(Buffer buffer) {}
 	//}}}
-
-	//{{{ nextLineRequested() method
-	/**
-	 * Called when a syntax highlighting line context changes.
-	 *
-	 * @param buffer The buffer in question
-	 * @param line Reconsider all lines after this
-	 * @since jEdit 4.2pre1
-	 */
-	public void nextLineRequested(Buffer buffer, int line) {}
-	//}}}
 }
