@@ -30,6 +30,7 @@ import javax.swing.tree.*;
 import java.awt.*;
 import java.awt.event.*;
 import org.gjt.sp.jedit.io.VFSManager;
+import org.gjt.sp.jedit.gui.DefaultFocusComponent;
 import org.gjt.sp.jedit.msg.*;
 import org.gjt.sp.jedit.textarea.*;
 import org.gjt.sp.jedit.*;
@@ -40,7 +41,8 @@ import org.gjt.sp.jedit.*;
  * @author Slava Pestov
  * @version $Id$
  */
-public class HyperSearchResults extends JPanel implements EBComponent
+public class HyperSearchResults extends JPanel implements EBComponent,
+	DefaultFocusComponent
 {
 	public static final String NAME = "hypersearch-results";
 
@@ -84,11 +86,10 @@ public class HyperSearchResults extends JPanel implements EBComponent
 		add(BorderLayout.CENTER, scrollPane);
 	} //}}}
 
-	//{{{ requestDefaultFocus() method
-	public boolean requestDefaultFocus()
+	//{{{ focusOnDefaultComponent() method
+	public void focusOnDefaultComponent()
 	{
 		resultTree.grabFocus();
-		return true;
 	} //}}}
 
 	//{{{ addNotify() method
